--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,16 +26,16 @@
         android:theme="@style/Theme.Filmoteca"
         tools:targetApi="31" >
         <activity
-            android:name=".FilmEditActivity"
+            android:name=".activity.FilmEditActivity"
             android:exported="false" />
         <activity
-            android:name=".FilmDataActivity"
+            android:name=".activity.FilmDataActivity"
             android:exported="false" />
         <activity
-            android:name=".AboutActivity"
+            android:name=".activity.AboutActivity"
             android:exported="false" />
         <activity
-            android:name=".FilmListActivity"
+            android:name=".activity.FilmListActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
