--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,11 +41,6 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="${mapsApiKey}" />
 
-        <activity
-            android:name=".activity.MapsActivity"
-            android:exported="false"
-            android:label="@string/title_activity_maps" />
-
         <service
             android:name=".service.FirebaseMessagingService"
             android:exported="false">
@@ -53,13 +48,13 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-        <receiver android:name=".GeofenceBroadcastReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.gms.location.GeofenceTransition" />
-            </intent-filter>
-        </receiver>
 
+        <receiver android:name=".GeofenceBroadcastReceiver"/>
+
+        <activity
+            android:name=".activity.MapsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_maps" />
         <activity
             android:name=".activity.LoginActivity"
             android:exported="true">
